--- a/QuestPackages/m64/lll/package.yml
+++ b/QuestPackages/m64/lll/package.yml
@@ -14,10 +14,10 @@ variables:
   inside_volcano:     -887;37;-655;marocraft;-135;12
 
 events:
-  init_level:         "init_spawns,init_lavaburn,init_stars,e_play_music"
-  deit_level:         "deit_spawns,deit_lavaburn,deit_stars,e_stop_music"
+  init_level:         "folder init_spawns,init_lavaburn,init_stars,e_play_music"
+  deit_level:         "folder deit_spawns,deit_lavaburn,deit_stars,e_stop_music"
   unlo_level:         "folder exit_level" # period:20 ticks
-  exit_level:         "deit_level,e_tp_respawn,core-main.init_castle"
+  exit_level:         "folder deit_level,e_tp_respawn,core-main.init_castle"
 
   on_death:           "folder e_notify_death,unlo_level,e_point_add_death,e_gpoint_add_death"
   on_exit:            "folder unlo_level"
