--- a/QuestPackages/m64/jrb/stars/star_6.yml
+++ b/QuestPackages/m64/jrb/stars/star_6.yml
@@ -10,7 +10,7 @@ events:
   e_obj_add_s6_star:      "objective add o_s6_star"
 
   # Win
-  win_s6:                 "folder e_notif_s6_win,core-sfx.e_got_star,cleanup_s6,if_firstwin_s6"
+  win_s6:                 "folder e_notif_s6_win,core-sfx.e_got_star,deit_s6,if_firstwin_s6"
   e_notif_s6_win:         "notify &3Through the jet stream\n&2Cleared! io:title"
 
   # First win
@@ -20,7 +20,7 @@ events:
   tag_add_s6_win:         "tag add s6"
 
   # Cleanup
-  cleanup_s6:             "folder e_obj_del_s6_star"
+  deit_s6:                "folder e_obj_del_s6_star"
   e_obj_del_s6_star:      "objective remove o_s6_star"
 
 
