--- a/QuestPackages/m64/jrb/level/switches/switches.yml
+++ b/QuestPackages/m64/jrb/level/switches/switches.yml
@@ -1,3 +1,3 @@
 events:
-  init_switches:      "folder "
-  deit_switches:      "folder "
+  init_switches:      "folder init_switch_1"
+  deit_switches:      "folder deit_switch_1"
