--- a/QuestPackages/m64/ssl/level/zones/killzones.yml
+++ b/QuestPackages/m64/ssl/level/zones/killzones.yml
@@ -1,19 +1,15 @@
 variables:
   kz:
     kz1:
-      region:         ssl_killzone1
+      region:         ssl_killzone1   # dark path pit
     kz2:
-      region:         ssl_killzone2
+      region:         ssl_killzone2   # around pyramid
     kz3:
-      region:         ssl_killzone3
+      region:         ssl_killzone3   # front left of pyramid
     kz4:
-      region:         ssl_killzone4
+      region:         ssl_killzone4   # front right of pyramid
     kz5:
-      region:         ssl_killzone5
-    kz6:
-      region:         ssl_killzone6
-    kz7:
-      region:         ssl_killzone7
+      region:         ssl_killzone5   # next to spawn
 
 
 events:
@@ -21,12 +17,12 @@ events:
   deit_killzones:     "folder e_obj_del_kzs_g1,e_obj_del_kzs_g2"
 
   # Init
-  e_obj_add_kzs_g1:   "run ^objective add o_killzone_1 ^objective add o_killzone_2 ^objective add o_killzone_3 ^objective add o_killzone_4"
-  e_obj_add_kzs_g2:   "run ^objective add o_killzone_5 ^objective add o_killzone_6 ^objective add o_killzone_7"
+  e_obj_add_kzs_g1:   "run ^objective add o_killzone_1 ^objective add o_killzone_2 ^objective add o_killzone_3"
+  e_obj_add_kzs_g2:   "run ^objective add o_killzone_4 ^objective add o_killzone_5 "
 
   # Cleanup
-  e_obj_del_kzs_g1:   "run ^objective remove o_killzone_1 ^objective remove o_killzone_2 ^objective remove o_killzone_3 ^objective remove o_killzone_4"
-  e_obj_del_kzs_g2:   "run ^objective remove o_killzone_5 ^objective remove o_killzone_6 ^objective remove o_killzone_7"
+  e_obj_del_kzs_g1:   "run ^objective remove o_killzone_1 ^objective remove o_killzone_2 ^objective remove o_killzone_3"
+  e_obj_del_kzs_g2:   "run ^objective remove o_killzone_4 ^objective remove o_killzone_5"
 
   # On killzone
   e_kz_kill:          "folder e_kz_dmg"
@@ -40,5 +36,3 @@ objectives:
   o_killzone_3:       "region $kz.kz3.region$ enter events:e_kz_kill"
   o_killzone_4:       "region $kz.kz4.region$ enter events:e_kz_kill"
   o_killzone_5:       "region $kz.kz5.region$ enter events:e_kz_kill"
-  o_killzone_6:       "region $kz.kz6.region$ enter events:e_kz_kill"
-  o_killzone_7:       "region $kz.kz7.region$ enter events:e_kz_kill"
