--- a/QuestPackages/m64/ssl/level/zones/zones.yml
+++ b/QuestPackages/m64/ssl/level/zones/zones.yml
@@ -1,3 +1,3 @@
 events:
   init_zones:       "folder init_killzones"
-  deit_zones:       "folder deit_killzones"
+  deit_zones:       "folder deit_killzones,deit_sub_killzones"
