--- a/QuestPackages/m64/ssl/package.yml
+++ b/QuestPackages/m64/ssl/package.yml
@@ -3,7 +3,8 @@
 # Level:            ssl
 # Sub-level entry:  ssl_enter_pyrfront
 # Sub-level:        ssl_inside
-#
+# Sub-boss:         ssl_boss
+
 # Cannons:          ssl_cannon_1
 # Pillars:          ssl_s6_p1..ssl_p6_s4
 # Star 8:           ssl_speedrun
@@ -12,13 +13,10 @@ variables:
   spawn:              -862.5;69;2.5;marocraft;180;12
   respawn:            -3.5;28;-438.5;marocraft;0;12
   exitsign:           -863;69;2;marocraft
-  exitsign2:          -927;74;416;marocraft
-  inside_pyramid:     -926.5;74;415.5;marocraft;180;12
-  inside_pyramid_top: -923.5;113;367.5;marocraft;45;12
 
 events:
   init_level:         "folder init_spawns,init_cannons,init_zones,init_stars,e_play_music"
-  deit_level:         "folder deit_spawns,deit_cannons,deit_zones,deit_stars,e_stop_music"
+  deit_level:         "folder deit_spawns,deit_cannons,deit_zones,deit_stars,deit_pyramid,e_stop_music"
   unlo_level:         "folder exit_level" # period:20 ticks
   exit_level:         "folder deit_level,e_tp_respawn,core-main.init_castle"
 
@@ -35,35 +33,27 @@ events:
   e_stop_music:       "folder core-music.e_stop_music"
 
   ### --- Spawn / Respawn ---------------------------------------
-  init_spawns:        "folder e_obj_add_respawn,e_obj_add_exit,e_obj_add_exit2,e_obj_add_tp_pyr"
+  init_spawns:        "folder e_obj_add_respawn,e_obj_add_exit,e_obj_add_exit2,e_obj_add_tp_pyr,e_tp_spawn"
   e_obj_add_respawn:  "objective add o_respawn"
   e_obj_add_exit:     "objective add o_exitlevel"
-  e_obj_add_exit2:    "objective add o_exitlevel2"
   e_obj_add_tp_pyr:   "objective add o_tp_pyramid"
 
-  deit_spawns:        "folder e_obj_del_respawn,e_obj_del_exit,e_obj_del_exit2,e_obj_del_tp_pyr"
+  deit_spawns:        "folder e_obj_del_respawn,e_obj_del_exit,e_obj_del_tp_pyr"
   e_obj_del_respawn:  "objective remove o_respawn"
   e_obj_del_exit:     "objective remove o_exitlevel"
-  e_obj_del_exit2:    "objective remove o_exitlevel2"
   e_obj_del_tp_pyr:   "objective remove o_tp_pyramid"
 
   # Teleports
   e_tp_spawn:         "teleport $spawn$"
   e_tp_respawn:       "teleport $respawn$"
-  # Sub area: Pyramid
-  e_tp_pyramid:       "teleport $inside_pyramid$"
 
   # Actions
   e_notify_death:     "command broadcast &3%player%&f died in SSL."
   e_point_add_death:  "point ssl_deaths 1 action:add"
   e_gpoint_add_death: "globalpoint ssl_deaths 1 action:add"
 
-  # Pyramid
-  e_init_pyramid:     "folder e_tp_pyramid,e_play_music_pyr"
-
 
 objectives:
   o_respawn:          "die cancel respawn:$respawn$ events:on_death"
   o_exitlevel:        "action right any loc:$exitsign$ events:on_exit"
-  o_exitlevel2:       "action right any loc:$exitsign2$ events:on_exit"
-  o_tp_pyramid:       "region ssl_enter_pyrfront enter events:e_init_pyramid"
+  o_tp_pyramid:       "region ssl_enter_pyrfront enter events:on_pyramid_front"
